--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div class="first"><button>Read More</button></div>
         </div>
         <div class="gra">
-            <img src="https://o.remove.bg/downloads/135227ea-b11d-449e-ae08-04617ffd141e/WhatsApp_Image_2023-03-22_at_14.16.35__1_-removebg-preview.png">
+            <img src="./image/WhatsApp_Image_2023-03-22_at_14.16.35__1_-removebg-preview.png">
         </div>
         </div>
     </div>
